cless/test-data/error/string_literal.c
int main() {
    const char *s = "Hello,
 World!";
}
